<resources>
    <string name="app_name">Salam Pakistan</string>
    <string name="facebook_app_id">3509076755872961</string>
    <string name="fb_login_protocol_scheme">fb216908928974155</string>
    <string name="about_us">about Us</string>
    <string name="amount">amount</string>
    <string name="activities">activities</string>
    <string name="all_four_seasons_to_enjoy">all four seasons to enjoy</string>
    <string name="apply_online">apply online</string>
    <string name="booking_and_reservation">booking and reservation</string>
    <string name="be_member">be a member</string>
    <string name="contact_us">contact Us</string>
    <string name="confirm_pwd">confirm Password</string>
    <string name="check_in">check in</string>
    <string name="check_out">check out</string>
    <string name="cnic">cnic</string>
    <string name="cancellation_policy">cancellation policy</string>
    <string name="check_best_things">check out the best things to do in Pakistan</string>
    <string name="create_account">create account</string>
    <string name="currency_exchange">currency exchange</string>
    <string name="dob">date of dirth</string>
    <string name="date_format">22 dec</string>
    <string name="server_date_format">2021-02-05</string>
    <string name="bus_date_format">22 dec 2020</string>
    <string name="departing">departing</string>
    <string name="discover_surroundings">discover the surroundings</string>
    <string name="day_count">day %d</string>
    <string name="email">email</string>
    <string name="email_address">email Address</string>
    <string name="empty"> </string>
    <string name="expert_tips">expert tips</string>
    <string name="explore_more">explore more</string>
    <string name="enter_email">enter your email</string>
    <string name="facilities">facilities</string>
    <string name="forgot_pwd">forgot password?</string>
    <string name="from">from</string>
    <string name="female">female</string>
    <string name="featured_text">featured %s</string>
    <string name="first_name">first name</string>
    <string name="user_name">%s %s</string>
    <string name="find_out">find out</string>
    <string name="flights">flights</string>
    <string name="festivities_n_events_text">%s festivities &amp; events</string>
    <string name="gender">gender</string>
    <string name="general_info">general information</string>
    <string name="home">home</string>
    <string name="hotels">hotels</string>
    <string name="hotel">hotel</string>
    <string name="ca">car</string>
    <string name="accommodation">accommodation</string>
    <string name="aitport">airport</string>
    <string name="flight">flight</string>
    <string name="train">train</string>
    <string name="car_rentals">car rental</string>
    <string name="bus">bus</string>
    <string name="intimate_insights">intimate insights</string>
    <string name="images">images</string>
    <string name="last_name">last name</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="location">location</string>
    <string name="karachi">Karachi</string>
    <string name="lahore">lahore</string>
    <string name="cabin">cabin</string>
    <string name="all_cabin">all cabins</string>
    <string name="url">%s</string>
    <string name="set_city">%s</string>
    <string name="set_location">%s, %s</string>
    <string name="set_start_end_date">%s,%s</string>
    <string name="set_per_person_text">rs. %s / person</string>
    <string name="locations">locations</string>
    <string name="lets_get_booking">let\'s get booking!</string>
    <string name="lets_go">let\'s go</string>
    <string name="male">male</string>
    <string name="made_by_experts">made by experts</string>
    <string name="mobile_number">mobile number</string>
    <string name="mission">mission</string>
    <string name="one_way">one way</string>
    <string name="pakistan">Pakistan</string>
    <string name="profile">profile</string>
    <string name="phone_number">phone number</string>
    <string name="planning">planning</string>
    <string name="enter_city_name">enter city name</string>
    <string name="map">map</string>
    <string name="map_lowercase">map</string>
    <string name="pwd">password</string>
    <string name="pk_rupee">pakistani rupee</string>
    <string name="plus_count">+ %d</string>
    <string name="reviews_count">%d reviews</string>
    <string name="review_count">%d reviews</string>
    <string name="rating_average">%d.0</string>
    <string name="read_more">read more</string>
    <string name="remove">remove</string>
    <string name="room">room</string>
    <plurals name="rooms">
        <item quantity="one">room</item>
        <item quantity="other">rooms</item>
    </plurals>
    <string name="returning">returning</string>
    <string name="submit">submit</string>
    <string name="seasonal_foods_n_fruits">seasonal foods &amp; fruits</string>
    <string name="services">services</string>
    <string name="all_services">all services</string>
    <string name="city_state">%s, %s</string>
    <string name="see_all">see all</string>
    <string name="starting_from">starting from %s</string>
    <string name="duration">duration %d</string>
    <string name="sights_of_text">the sights of %s</string>
    <string name="start_adventure">start your adventure</string>
    <string name="trains">trains</string>
    <string name="type">type</string>
    <string name="to">to</string>
    <string name="trips_u_cant_miss">trips you cannot miss</string>
    <string name="trip_itinerary">trip itinerary</string>
    <string name="travelling_text">travelling in %s</string>
    <string name="update">update</string>
    <string name="vision">vision</string>
    <string name="visa_status">visa status</string>
    <string name="visa_availability">visa availability</string>
    <string name="wishlist">wishlist</string>
    <string name="where_to_go">where to go</string>
    <string name="what_to_do">what to do</string>
    <string name="welcome_back">welcome back</string>
    <string name="zero">0</string>
    <plurals name="nights">
        <item quantity="one">night</item>
        <item quantity="other">nights</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="adults">adults</string>
    <plurals name="children">
        <item quantity="one">child</item>
        <item quantity="other">children</item>
    </plurals>
    <string name="infants">infants</string>
    <string name="banner_desc">your gateway to a realm of incredible beauty, warm\nhospitality, exquisite food &amp; endless discovery.</string>
    <string name="apply_e_visa">apply e-visa</string>
    <string name="already_member">already a member?</string>
    <string name="login_here">login here</string>
    <string name="login_signup">log in / sign up</string>
    <string name="login_to_view_details">please login to view and edit your details</string>
    <string name="logout_confirm_dialog_title">confirm Logout</string>
    <string name="logout_confirm_dialog_msg">are you sure you want to logout?</string>
    <string name="email_empty">email address cannot be empty</string>
    <string name="email_already_exists_error">an account with this email address already exists</string>
    <string name="invalid_first_name">invalid first name</string>
    <string name="invalid_last_name">invalid last name</string>
    <string name="invalid_email">invalid email address</string>
    <string name="invalid_mobile">invalid mobile number</string>
    <string name="invalid_cnic">invalid CNIC number</string>
    <string name="invalid_pwd">invalid password</string>
    <string name="invalid_cnfrm_pwd">invalid confirm password</string>
    <string name="pwd_length_error">password must have at least 6 characters</string>
    <string name="profile_updated_success">profile updated successfully</string>
    <string name="cnfrm_pwd">password and confirm password must be equal</string>
    <string name="invalid_gender">please select gender</string>
    <string name="invalid_dob">please provide Date of Birth</string>
    <string name="experience_the_seasons">experience the seasons</string>
    <string name="no_wishlist">no wishlist present</string>
    <string name="no_review">no review present</string>
    <string name="ptdc_phone">051&#8211;9212850</string>
    <string name="ptdc_email">info@tourism.gov.pk</string>
    <string name="contact_us_confirmation_title">switch application?</string>
    <string name="contact_us_call_confirmation_msg">this action will launch the phone application</string>
    <string name="about_message_director_title">message from the Managing Director</string>
    <string name="about_message_director_content">impact of tourism on a country\’s economy, society, communities, and prosperity cannot be underscored. throughout the world, tourism sector has been hailed for its invaluable worth as a powerful driver of socioeconomic development. today, countries are increasingly striving to position themselves as a preferred destination for tourists. we, at PTDC, are committed to fulfil the potential of Pakistan as the tourism\’s next big venture to look forward to. Pakistan is endowed with unparalleled natural beauty, rich culture, hospitable communities, religious diversity, and distinctive culinary delights. our vision is to share these gifts with the world in a sustainable fashion, while ensuring that our communities reap the benefits of a thriving tourism industry.\n\ni am pleased with the progress we have made to achieve our objectives, including the formulation of the National Tourism Strategy (2020&#8211;2030) complemented by 5 years Action Plan (2020&#8211;25), which will guide the sector in the coming years. national minimum Standards for the tourism sector is yet another accomplishment which will ensure tourist service excellence and a memorable consumer experience. we will continue to work with our provinces, partners and stakeholders for developing synergies, building capacities, strengthening public&#8211;private partnerships, investing in human capital, and promoting our unmatched tourism products to make Pakistan one of the leading tourist destinations.</string>
    <string name="about_message_vision_content">the vision is to develop the tourism sector as a national priority in a sustainable and acceptable manner, taking full advantage of regional and international trends and developments so that it can significantly contribute to the improvement of quality of life in Pakistan whilst promoting the country\’s cultural and natural heritage.</string>
    <string name="about_message_mission_content">to create an enabling environment for Pakistan\’s tourism industry by providing world&#8211;class facilities that commensurate with our rich cultural heritage, rare archaeological treasures and exquisite environmental beauty in close partnership and coordination between the public and the private sector while preserving and protecting our cultural and moral values and projecting tourist friendly image of the country.</string>
    <string name="add_to_plan">add to plan</string>
    <string name="add_to_wishlist">add to wishlist</string>
    <string name="check_visa_desc">get all the visa information you need to travel to pakistan. the good news is that we offer several countries a visa on arrival. select your country to get started.</string>
    <string name="check_visa_select_country">select your country</string>
    <string name="check_visa_country_not_listed">if your country is not listed above, kindly visit the nearest Pakistani embassy for details.</string>
    <string name="check_visa_check_availability">check availability</string>
    <string name="event">events</string>
</resources>