<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/home" />
    <item
        android:id="@+id/eventListFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/event" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />
    <item
        android:id="@+id/planningFragment"
        android:icon="@drawable/ic_planning"
        android:title="@string/planning" />
    <!--    <item-->
    <!--        android:id="@+id/hotel"-->
    <!--        android:icon="@drawable/ic_tab_hotel"-->
    <!--        android:title="@string/hotels" />-->
    <!--    <item-->
    <!--        android:id="@+id/planning"-->
    <!--        android:icon="@drawable/ic_tab_planning"-->
    <!--        android:title="@string/planning" />-->
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_tab_profile"
        app:showAsAction="always"
        android:title="@string/profile" />
</menu>