<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_x_large"
                android:layout_marginBottom="@dimen/padding_micro"
                android:text="@string/about_message_director_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_x_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/about_message_director_content"
                android:textAppearance="@style/AppTheme.TextView.Reg.Small"
                android:textColor="@color/grey90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_x_large"
                android:layout_marginBottom="@dimen/padding_micro"
                android:text="@string/vision"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_x_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/about_message_vision_content"
                android:textAppearance="@style/AppTheme.TextView.Reg.Small"
                android:textColor="@color/grey90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_x_large"
                android:layout_marginBottom="@dimen/padding_micro"
                android:text="@string/mission"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_x_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/about_message_mission_content"
                android:textAppearance="@style/AppTheme.TextView.Reg.Small"
                android:textColor="@color/grey90" />
        </LinearLayout>
    </ScrollView>
</layout>