<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="fragment"
            type="com.salampakistan.ui.fragments.profile.ContactUsFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/padding_big">

        <ImageView
            android:id="@+id/contact_us_icon"
            style="@style/AppTheme.ContactUs.Icon"
            android:src="@drawable/ic_phone_green_24dp" />

        <TextView
            android:id="@+id/contact_us_text"
            style="@style/AppTheme.ContactUs.Title"
            android:layout_toEndOf="@+id/contact_us_icon"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/phone_number_text"
            style="@style/AppTheme.ContactUs.Value"
            android:layout_below="@+id/contact_us_text"
            android:layout_toEndOf="@+id/contact_us_icon"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:onClick="@{fragment::onPhoneTextClicked}"
            android:text="@string/ptdc_phone" />

        <ImageView
            android:id="@+id/copy_phone_icon"
            style="@style/AppTheme.ContactUs.Icon"
            android:layout_below="@+id/contact_us_text"
            android:layout_alignParentEnd="true"
            android:onClick="@{() -> fragment.onCopyBtnClicked(@string/ptdc_phone)}"
            android:src="@drawable/ic_content_copy_grey_24dp" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/phone_number_text"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:background="@color/separator" />

        <ImageView
            android:id="@+id/email_icon"
            style="@style/AppTheme.ContactUs.Icon"
            android:layout_below="@+id/separator"
            android:src="@drawable/ic_email_green_24dp" />

        <TextView
            android:id="@+id/email_text"
            style="@style/AppTheme.ContactUs.Title"
            android:layout_below="@+id/separator"
            android:layout_toEndOf="@+id/contact_us_icon"
            android:text="@string/email_address" />

        <TextView
            style="@style/AppTheme.ContactUs.Value"
            android:layout_below="@+id/email_text"
            android:layout_toEndOf="@+id/email_icon"
            android:onClick="@{fragment::onEmailTextClicked}"
            android:text="@string/ptdc_email" />

        <ImageView
            android:id="@+id/copy_email_icon"
            style="@style/AppTheme.ContactUs.Icon"
            android:layout_below="@+id/email_text"
            android:layout_alignParentEnd="true"
            android:onClick="@{() -> fragment.onCopyBtnClicked(@string/ptdc_email)}"
            android:src="@drawable/ic_content_copy_grey_24dp" />
    </RelativeLayout>
</layout>